# fpr

./: .gitignore  README.md  fpr.py  pyproject.toml
.github/workflows/: publish.yml
