[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modularizer-fpr"
version = "0.1.0"
description = "Heuristically detect the root of a project directory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Unlicense"}
authors = [
    {name = "Torin Halsted", email = "modularizer@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
fpr = "fpr:main"

